[package]
name = "vfts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
clap = { version = "4.5.37", features = ["derive"] }
futures-util = "0.3.31"
tantivy = "0.24.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "fs"] }
vortex-array = { path = "/Users/stuhood/src/vortex/vortex-array" }
vortex-btrblocks = { path = "/Users/stuhood/src/vortex/vortex-btrblocks" }
vortex-buffer =  { path = "/Users/stuhood/src/vortex/vortex-buffer" }
vortex-dtype = { path = "/Users/stuhood/src/vortex/vortex-dtype" }
vortex-error = { path = "/Users/stuhood/src/vortex/vortex-error" }
vortex-expr = { path = "/Users/stuhood/src/vortex/vortex-expr" }
vortex-file = { path = "/Users/stuhood/src/vortex/vortex-file", features = ["tokio"] }
vortex-io = { path = "/Users/stuhood/src/vortex/vortex-io", features = ["tokio"] }
vortex-mask = { path = "/Users/stuhood/src/vortex/vortex-mask" }
vortex-scalar = { path = "/Users/stuhood/src/vortex/vortex-scalar" }
